<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cubic</string>
    <string name="samples_title">Sample!</string>

    <string name="continue_button">Continue</string>
    <string name="start_button">Start</string>
    <string name="settings_button">Settings</string>
    <string name="samples_button">Sample!</string>
    <string name="delete_data_button">Delete Data</string>
    <string name="tab_activity_button">Tabs Interface</string>
    <string name="copyright_text">Made by Anton Selyanin</string>
</resources>
