<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >

    <ImageView android:id="@+id/screen_icon"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/main_screen_icon"
               android:layout_gravity="center_horizontal"
               android:layout_margin="30dp"
            />
    
    <Button android:id="@+id/start_button"
            android:text="@string/start_button"
            android:textSize="30sp"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

    <Button android:id="@+id/continue_button"
            android:text="@string/continue_button"
            android:textSize="30sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

    <TextView android:id="@+id/copyright_text"
            android:text="@string/copyright_text"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

    <Button android:id="@+id/delete_data_button"
            android:text="@string/delete_data_button"
            android:textSize="30sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:visibility="gone"
            />

    <Button android:id="@+id/samples_button"
            android:text="@string/samples_button"
            android:textSize="30sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:visibility="gone"
            />

    <CheckBox android:id="@+id/sounds_checkbox"
            android:text="Sounds enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"            
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:visibility="gone"
            />

</LinearLayout>

